Package_Tools/include-C/fwupd-1/libfwupd/fertig/fwupd_client.pp

procedure fwupd_client_emulation_save_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_emulation_save_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGBytes;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_fix_host_security_attr_async(self:PFwupdClient; appstream_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_fix_host_security_attr_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_undo_host_security_attr_async(self:PFwupdClient; appstream_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_undo_host_security_attr_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
function fwupd_client_get_status(self:PFwupdClient):TFwupdStatus;cdecl;external;
function fwupd_client_get_tainted(self:PFwupdClient):Tgboolean;cdecl;external;
function fwupd_client_get_only_trusted(self:PFwupdClient):Tgboolean;cdecl;external;
function fwupd_client_get_daemon_interactive(self:PFwupdClient):Tgboolean;cdecl;external;
function fwupd_client_get_percentage(self:PFwupdClient):Tguint;cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_daemon_version(self:PFwupdClient):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_set_daemon_version(self:PFwupdClient; daemon_version:Pgchar);cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_host_bkc(self:PFwupdClient):Pgchar;cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_host_vendor(self:PFwupdClient):Pgchar;cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_host_product(self:PFwupdClient):Pgchar;cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_host_machine_id(self:PFwupdClient):Pgchar;cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_host_security_id(self:PFwupdClient):Pgchar;cdecl;external;
function fwupd_client_get_battery_level(self:PFwupdClient):Tguint32;cdecl;external;
function fwupd_client_get_battery_threshold(self:PFwupdClient):Tguint32;cdecl;external;
procedure fwupd_client_get_remotes_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_remotes_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_get_remote_by_id_async(self:PFwupdClient; remote_id:Pgchar; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_remote_by_id_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PFwupdRemote;cdecl;external;
procedure fwupd_client_get_approved_firmware_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_approved_firmware_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_set_approved_firmware_async(self:PFwupdClient; checksums:PGPtrArray; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_set_approved_firmware_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
procedure fwupd_client_get_blocked_firmware_async(self:PFwupdClient; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_get_blocked_firmware_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGPtrArray;cdecl;external;
procedure fwupd_client_set_blocked_firmware_async(self:PFwupdClient; checksums:PGPtrArray; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_set_blocked_firmware_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_self_sign_async(self:PFwupdClient; value:Pgchar; flags:TFwupdSelfSignFlags; cancellable:PGCancellable; callback:TGAsyncReadyCallback; 
            callback_data:Tgpointer);cdecl;external;
function fwupd_client_self_sign_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Pgchar;cdecl;external;
procedure fwupd_client_set_feature_flags_async(self:PFwupdClient; feature_flags:TFwupdFeatureFlags; cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_set_feature_flags_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
function fwupd_client_get_user_agent(self:PFwupdClient):Pgchar;cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_set_user_agent(self:PFwupdClient; user_agent:Pgchar);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_set_user_agent_for_package(self:PFwupdClient; package_name:Pgchar; package_version:Pgchar);cdecl;external;
(* Const before type ignored *)
procedure fwupd_client_download_bytes_async(self:PFwupdClient; url:Pgchar; flags:TFwupdClientDownloadFlags; cancellable:PGCancellable; callback:TGAsyncReadyCallback; 
            callback_data:Tgpointer);cdecl;external;
function fwupd_client_download_bytes_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGBytes;cdecl;external;
procedure fwupd_client_download_set_retries(self:PFwupdClient; retries:Tguint);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_upload_bytes_async(self:PFwupdClient; url:Pgchar; payload:Pgchar; signature:Pgchar; flags:TFwupdClientUploadFlags; 
            cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_upload_bytes_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):PGBytes;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_upload_report_async(self:PFwupdClient; url:Pgchar; payload:Pgchar; signature:Pgchar; flags:TFwupdClientUploadFlags; 
            cancellable:PGCancellable; callback:TGAsyncReadyCallback; callback_data:Tgpointer);cdecl;external;
function fwupd_client_upload_report_finish(self:PFwupdClient; res:PGAsyncResult; error:PPGError):Pgchar;cdecl;external;
function fwupd_client_ensure_networking(self:PFwupdClient; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure fwupd_client_add_hint(self:PFwupdClient; key:Pgchar; value:Pgchar);cdecl;external;
function fwupd_client_build_report_devices(self:PFwupdClient; devices:PGPtrArray; metadata:PGHashTable; error:PPGError):Pgchar;cdecl;external;

implementation

{ was #define dname def_expr }
function FWUPD_TYPE_CLIENT : longint; { return type might be wrong }
  begin
    FWUPD_TYPE_CLIENT:=fwupd_client_get_type;
  end;


end.
